@@ -52,6 +52,11 @@ info devices
      of '-thread-info' for such a thread contains 'execution-mask' and
      'simd-width' fields.
 
+  ** '-device-info'
+
+     Added new MI command '-device-info' which is equivalent to CLI command
+     'info devices'.
+
 * New remote packets
 
 qXfer:libraries:read's response
